--- a/homework01/homework1.ipynb
+++ b/homework01/homework1.ipynb
@@ -17,17 +17,19 @@
     "The earliest psychologists studied the human mind using introspection. Introspection, by definition, is the examination\n",
     "or observation of one's own mental and emotional processes (Oxford). The goal of the psychologists in using this was to \n",
     "gain a privileged access to one's own mental states without the influence of other factors. By doing this, they could\n",
-    "determine their own sensory, bodily, cognitive, and emotional states (Wikipedia). Now, as AI continues to grow in its \n",
+    "determine their own sensory, bodily, cognitive, and emotional states. Now, as AI continues to grow in its \n",
     "influence on the world, researchers must understand the human cognitive processes so that they can model them with AI.\n",
     "\n",
     "I believe that introspection is not a valuable way to understand these processes. Critics have explained \n",
-    "that \"introspecting a mental state tends to alter the very state itself\" (Wikipedia). This is because rather than\n",
+    "that \"introspecting a mental state tends to alter the very state itself\". This is because rather than\n",
     "introspection being an inner sensation, it actually requires attention, meaning unconscious mental states cannot be \n",
-    "reached (Wikipedia). Therefore, the best introspection can do is simply give hints about how the mind works (Wikipedia)\n",
-    "rather than provide a scientific theory that can be duplicated in AI. Introspection is unable of reaching the high-level\n",
-    "mental processes like goal-setting and decision-making (Wikipedia), which are the exact processes that AI needs to have\n",
+    "reached. Therefore, the best introspection can do is simply give hints about how the mind works rather\n",
+    "than provide a scientific theory that can be duplicated in AI. Introspection is unable of reaching the high-level\n",
+    "mental processes like goal-setting and decision-making, which are the exact processes that AI needs to have\n",
     "in order to successfully solve problems. Clearly, introspection cannot function as the bridge between human cognitive\n",
-    "processes and successful AI. "
+    "processes and successful AI. \n",
+    "\n",
+    "*(source: Wikipedia)*"
    ],
    "metadata": {
     "collapsed": false
@@ -200,7 +202,18 @@
     "    - a faculty member can only teach one thing at a time.\n",
     "    - a room can only have one class at each time.\n",
     "    \n",
-    "While fulfilling these constraints, a solution must be found that successfully schedules all 6 classes.\n"
+    "While fulfilling these constraints, a solution must be found that successfully schedules all 6 classes.\n",
+    "\n",
+    "To formulate this problem to be solved, a list of the possible variables (classes) was created. Then, the domains of \n",
+    "these variables (possible times, rooms, and faculty) were created as a dictionary with the class as the key. The \n",
+    "times and rooms were added to all variables, while the faculty members were assigned to specific class domains to \n",
+    "simplify the problem. The neighbors of each variable are all the other variables involved in the constraint, which in\n",
+    "these case meant every class was neighbors with every other class. Next, in defining the constraints of the problem,\n",
+    "the given variables A and B must not be the same because every class is only offered once. Additionally, the time and \n",
+    "room of 2 given variables could not be the same because a room could not be used for 2 classes at the same time. \n",
+    "Similarly, the time and faculty of 2 given variables could not be the same because a faculty could not teach 2 classes\n",
+    "at the same time. Min-conflicts was used to search for a schedule that satisfied these constraints, and the solution \n",
+    "was printed. \n"
    ],
    "metadata": {
     "collapsed": false
@@ -211,13 +224,61 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "print(from csp import backtracking_search, NQueensCSP, min_conflicts, mrv, \\\n",
-    "      forward_checking, AC3\n",
-    "      from search import depth_first_graph_search\n",
-    "      import logging\n",
+    "print(\n",
+    "    \"\"\"from csp import *\n",
     "\n",
-    "class schedule(CSP):\n",
-    "    \n",
+    "def schedule():\n",
+    "    # Return a CSP formulation of a scheduling problem\n",
+    "    variables = ['cs108', 'cs112', 'cs212', 'cs214', 'cs262', 'cs344']\n",
+    "\n",
+    "    # Create the domains for every class variable, with the possible values being time and room\n",
+    "    domains = {}\n",
+    "    for var in variables:\n",
+    "        domains[var] = [['mwf800', 'nh253'],['mwf900', 'nh253'],['mwf1030', 'nh253'],['mwf1130', 'nh253'],['mwf800', 'sb382'],['mwf900', 'sb382'],['mwf1030', 'sb382'],['mwf1130', 'sb382']]\n",
+    "\n",
+    "    # Explicitly assign faculty to specific classes to ensure each one only teaches one class, and to reduce the\n",
+    "    # total number of possible domains for each variable\n",
+    "    for i in range(8):\n",
+    "        domains['cs108'][i].append('schuurman')\n",
+    "        domains['cs112'][i].append('adams')\n",
+    "        domains['cs212'][i].append('adams')\n",
+    "        domains['cs214'][i].append('norman')\n",
+    "        domains['cs262'][i].append('norman')\n",
+    "        domains['cs344'][i].append('vanderlinden')\n",
+    "\n",
+    "    # The neighbors for each variable are all the other variables (not itself)\n",
+    "    neighbors = {'cs108': ['cs112', 'cs212', 'cs214', 'cs262', 'cs344'], 'cs112': ['cs108', 'cs212', 'cs214', 'cs262', 'cs344'], 'cs212': ['cs108', 'cs112', 'cs214', 'cs262', 'cs344'], 'cs214': ['cs108', 'cs112', 'cs212', 'cs262', 'cs344'], 'cs262': ['cs108', 'cs112', 'cs212', 'cs214', 'cs344'], 'cs344': ['cs108', 'cs112', 'cs212', 'cs214', 'cs262']}\n",
+    "\n",
+    "    # Define the constraints that the solution must meet\n",
+    "    def schedule_constraint(A, a, B, b):\n",
+    "\n",
+    "        # each class cannot be offered more than once (more than one state)\n",
+    "        if A == B:\n",
+    "            return False\n",
+    "        if A != B:\n",
+    "            # if both the time and room are the same for 2 variables, it is not a solution because the same room\n",
+    "            # cannot be used by 2 classes at the same time\n",
+    "            if a[0] == b[0] and a[1] == b[1]:\n",
+    "                return False\n",
+    "            # if both the time and faculty are the same for 2 variables, it is not a solution because faculty cannot\n",
+    "            # teach 2 classes at the same time\n",
+    "            if a[0] == b[0] and a[2] == b[2]:\n",
+    "                return False\n",
+    "            # if the constraints are satisfied, a solution has been found\n",
+    "            return True\n",
+    "\n",
+    "    return CSP(variables, domains, neighbors, schedule_constraint)\n",
+    "\n",
+    "# use AIMA search algorithm to solve the problem\n",
+    "solution = min_conflicts(schedule(), max_steps=10000)\n",
+    "\n",
+    "# display the solution if one was found\n",
+    "if solution != None:\n",
+    "    print(\"Solution:\\n\")\n",
+    "    print(solution)\n",
+    "else:\n",
+    "    print(\"Failed: solution returned None\")\n",
+    "\"\"\"\n",
     ")\n"
    ],
    "metadata": {
