--- a/homework02/homework2.ipynb
+++ b/homework02/homework2.ipynb
@@ -51,6 +51,7 @@
     "        nbad += 1\n",
     "        # count how many times each word is used\n",
     "        for word in phrase:\n",
+    "            # make everything lowercase for uniformity\n",
     "            word = word.lower()\n",
     "            if bool(bad.get(word)):\n",
     "                bad[word] = bad[word] + 1\n",
@@ -64,6 +65,7 @@
     "        ngood += 1\n",
     "        # count how many times each word is used\n",
     "        for word in phrase:\n",
+    "            # make everything lowercase for uniformity\n",
     "            word = word.lower()\n",
     "            if bool(good.get(word)):\n",
     "                good[word] = good[word] + 1\n",
@@ -84,14 +86,12 @@
     "        else:\n",
     "            b = 0\n",
     "        # threshold of 1 so every word is evaluated\n",
-    "        # calculate the probability that a word is spam based on the number of occurrences and number of good\n",
-    "        # and bad messages\n",
+    "        # calculate the probability that a word is spam based on the number of occurrences and number of good and bad messages\n",
     "        probabilities[word] = max(0.01, min(0.99, min(1.0, b / nbad) / (min(1.0, g / ngood) + min(1.0, b / nbad))))\n",
     "    return probabilities\n",
     "\n",
     "# none of our test messages are 15+ words --> use all of them in test\n",
-    "# This function determines the probability that a message is spam based on the individual probability of each\n",
-    "# word being spam\n",
+    "# This function determines the probability that a message is spam based on the individual probability of each word being spam\n",
     "def is_spam(message, dict):\n",
     "    # keep track of words used so each one is used once\n",
     "    usedwords = []\n",
@@ -99,6 +99,7 @@
     "    comp_prod = 0\n",
     "    first = True\n",
     "    for word in message:\n",
+    "        # make everything lowercase for uniformity\n",
     "        word = word.lower()\n",
     "        if word not in usedwords:\n",
     "            # first time through loop is different so that you don't multiply by 0\n",
