--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -31,7 +31,29 @@
     "Deep Dream interprets images. I want to see how the homogeneity and quantity of the training data affects Deep Dream's\n",
     "performance. I want to see how the structure of the CNN affects the output images, and if the network works better or\n",
     "worse on certain images. I believe that exploring these things will help me better understand how neural networks\n",
-    "see images and what needs to change to make their image classification even better.\n"
+    "see images and what needs to change to make their image classification even better.\n",
+    "\n",
+    "### Update\n",
+    "\n",
+    "To start this exploration of Deep Dream I will be working through the Deep Dream example from chollet and getting it to\n",
+    "run (https://github.com/fchollet/deep-learning-with-python-notebooks/blob/master/8.2-deep-dream.ipynb). Once I have this \n",
+    "tutorial up and running, I will feed it different images to see what it outputs and get a sense of what the model is\n",
+    "seeing when it looks at an image. Since the CNN being used (InceptionV3) is already trained on \n",
+    "ImageNet, I will feed the model different styles of images and see how the results vary. For example, how does it treat\n",
+    "images with a lot or a little detail, lots of colors or only a few, complicated objects or simple shapes etc. Depending\n",
+    "on time, I will use some or all of the other\n",
+    "CNN architectures in Keras: VGG16, VGG19, Xception, and ResNet50 to see how they produce different results.\n",
+    "Additionally, within these models I will change the combination of layer activation weights, experimenting using some,\n",
+    "all, high, and low weights. These layer weights control\n",
+    "how different patterns are used by the model to look at an image, where lower layers are geometric patterns and higher\n",
+    "layers are more like images. \n",
+    "\n",
+    "The goal with all of this is too see how Deep Dream interacts with different images and CNN architectures in order to\n",
+    "get a better understanding of how deep neural networks \"see\" images. \n",
+    "The results will come in the form of a lot of images. These images will aid me in explaining the different effects of\n",
+    "the various image styles, activation weight combinations, and CNNs. From these results I will explain what makes Deep\n",
+    "Dream useful, or why it is not. If it is useful, I'll explain how it should be used and the social and ethical \n",
+    "implications that come with it. "
    ]
   }
  ],
